nu pradinis variantas

--- a/tasker_jolita/tasks/templates/base.html
+++ b/tasker_jolita/tasks/templates/base.html
@@ -22,7 +22,7 @@
     <main>{% block content %}{% endblock content %}</main>    
     <footer>
         {% block footer %}{% endblock footer %}
-        <p>&copy; 2023/2024 <a href="https://www.instagram.com/jolitaviso_/" target="_blank">Jolkute</a></p>
+        <p>&copy; 2023/2024 <a style="float:right;" href="https://www.instagram.com/jolitaviso_/" target="_blank">Jolkute</a></p>
     </footer>
 </body>
 </html>
