--- a/tasker_jolita/tasks/templates/tasks/index.html
+++ b/tasker_jolita/tasks/templates/tasks/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>TASKer</h1>
+    <h1>Mur Miau report</h1>
     <p>Users: {{ users_count }}</p>
     <p>Projects: {{ projects_count }}</p>
     <p>Tasks: {{ tasks_count }}</p>
