--- a/tasker_jolita/tasks/templates/tasks/task_detail.html
+++ b/tasker_jolita/tasks/templates/tasks/task_detail.html
@@ -2,7 +2,7 @@
 {% block title %}{{ block.super }} | {{ task }}{% endblock title %}
 {% block content %}
 <h1><a href="{% url "task_done" task.pk %}?next={{ request.path }}">
-    {% if task.is_done %}&#x2611;{% else %}&#x2610;{% endif %}
+    {% if task.is_done %}&#x2611;{% else %}&#x2610;{% endif %}</a>
     {{ task.name }}</h1>
 <p>Owner: {{ task.owner }} / {{ task.project }}</p>
 <p>Deadline: {{ task.deadline }}</p>
