--- a/tasker_jolita/tasks/templates/tasks/index.html
+++ b/tasker_jolita/tasks/templates/tasks/index.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}{% load i18n %}
 {% block content %}
-    <h1>{% trans "mur miau report"|capfirst %}</h1>
-    <p>{% trans "users"|capfirst %}: {{ users_count }}</p>
-    <p>{% trans "project"|capfirst %}: {{ projects_count }}</p>
-    <p>{% trans "tasks"|capfirst %}: {{ tasks_count }}</p>
+<h1>{% trans "mur miau report"|capfirst %}</h1>
+<p>{% trans "users"|capfirst %}: {{ users_count }}</p>
+<p>{% trans "project"|capfirst %}: {{ projects_count }}</p>
+<p>{% trans "tasks"|capfirst %}: {{ tasks_count }}</p>
+<div class ="button">
+    <div class='fog'>
+        Ačiū ir geros dienos
+    </div>
+</div>
 {% endblock content %}
