--- a/tasker_jolita/tasks/static/css/style.css
+++ b/tasker_jolita/tasks/static/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #ffd2b4;
+    background-image: url('/static/img/gelike.jpg');
     font-family: sans-serif;
     font-size: 16px;
     display: flex;
@@ -54,6 +55,7 @@ header ul.nav li a:hover, header ul.nav li form button:hover {
 
 main {
     flex-grow: 1;
+    background-color: #cccccc9f;
 }
 
 footer {
@@ -140,4 +142,28 @@ section.messages {
 
 .message-error {
     background-color: #ffaaaa;
+}
+
+.spacer {
+    flex-grow: 1;
+}
+header form select {
+    margin: 1rem;
+    font-size: 100%;
+}
+
+div.button {
+    background-image: url('/static/img/gelike.jpg');
+    background-size: contain;
+    display: inline-block;
+    border: 2px solid #ffcc00;
+    border-radius: 1rem;
+    margin: 1rem;
+}
+
+div.fog {
+    background-color: #ffffff9f;
+    display: inline-block;
+    padding: 2rem;
+    border-radius: 1rem;
 }
