--- a/tasker_jolita/tasks/templates/base.html
+++ b/tasker_jolita/tasks/templates/base.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>{% load static i18n %}
-<html lang="en">
+<!DOCTYPE html>{% load static i18n %}{% get_current_language as LANGUAGE_CODE %}{% get_available_languages as LANGUAGES %}
+<html lang="{{ LANGUAGE_CODE }}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +13,18 @@
             <li><a href="{% url 'index' %}">{% trans "dashboard"|capfirst %}</a></li>
             <li><a href="{% url 'task_list' %}">{%trans "tasks"|capfirst %}</a></li>
         </ul>
+        <span class="spacer"></span>
+        <form action="{% url 'set_language' %}" method="post">
+            {% csrf_token %}
+            <input type="hidden" name="next" value="{{ redirect_to }}">
+            <select class="language" name="language" onchange="this.form.submit();">
+                {% for language in LANGUAGES %}
+                    <option value="{{ language.0 }}" {% if language.0 == LANGUAGE_CODE %}selected{% endif %}>
+                        {{ language.1 }}
+                    </option>
+                {% endfor %}
+            </select>
+        </form>
     </header>
     <section class="messages">
         {% for message in messages %}
@@ -22,7 +34,14 @@
     <main>{% block content %}{% endblock content %}</main>    
     <footer>
         {% block footer %}{% endblock footer %}
-        <p>&copy; 2023/2024 <a style="float:right;" href="https://www.instagram.com/jolitaviso_/" target="_blank">{%trans "jolituke"|capfirst%}</a></p>
-    </footer>
+        <p style="text-align: center; display: flex; justify-content: center; align-items: center;">
+            &copy; 2023/2024
+            <a style="font-size: larger; margin-left: auto;" href="https://www.instagram.com/jolitaviso_/" target="_blank">{%trans "susipažinkime"|capfirst %}</a>
+            <a style="margin-left: auto;" href="https://www.instagram.com/jolitaviso_/" target="_blank">
+                <img class="icon" src="{% static "img/icons8-instagram-48.png" %}"></a>
+            <a href="https://www.facebook.com/jolitaviso/" target="_blank">
+                <img class="icon" src="{% static "img/icons8-facebook-48.png" %}"></a>
+        </p>
+    </footer>    
 </body>
 </html>
