naujo vartotojo prisijungimas

--- a/tasker_jolita/tasks/static/css/style.css
+++ b/tasker_jolita/tasks/static/css/style.css
@@ -118,7 +118,7 @@ section.messages {
     margin: 0;
 }
 
-.message {
+.message, ul.errorlist {
     padding: 0.5rem;
     margin: 0;
     border-bottom: 1px solid #888888;
@@ -140,7 +140,7 @@ section.messages {
     background-color: #ffcc99;
 }
 
-.message-error {
+.message-error, ul.errorlist {
     background-color: #ffaaaa;
 }
 
@@ -166,4 +166,20 @@ div.fog {
     display: inline-block;
     padding: 2rem;
     border-radius: 1rem;
+}
+
+main form label {
+    display: inline-block;
+    min-width: 20vw;
+    font-size: 120%;
+}
+
+main form input,
+main form textarea,
+main form button {
+    font-size: 120%;
+}
+main form .helptext {
+    display: block;
+    font-size: 90%;
 }
