Information skilties bandymas padaryti

--- a/tasker_jolita/tasks/templates/tasks/index.html
+++ b/tasker_jolita/tasks/templates/tasks/index.html
@@ -2,8 +2,9 @@
 {% block content %}
 <h1>{% trans "mur miau report"|capfirst %}</h1>
 <p>{% trans "users"|capfirst %}: {{ users_count }}</p>
-<p>{% trans "project"|capfirst %}: {{ projects_count }}</p>
+<p>{% trans "projects"|capfirst %}: {{ projects_count }}</p>
 <p>{% trans "tasks"|capfirst %}: {{ tasks_count }}</p>
+<p>{% trans "information"|capfirst %}: {{ information_count }}</p>
 <div class ="button">
     <div class='fog'>
         Ačiū ir geros dienos
