--- a/tasker_jolita/tasks/templates/base.html
+++ b/tasker_jolita/tasks/templates/base.html
@@ -12,6 +12,7 @@
         <ul class='nav'>
             <li><a href="{% url 'index' %}">{% trans "dashboard"|capfirst %}</a></li>
             <li><a href="{% url 'task_list' %}">{%trans "tasks"|capfirst %}</a></li>
+            <li><a href="{% url 'information_list' %}">{%trans "information"|capfirst %}</a></li>
         </ul>
         <span class="spacer"></span>
         <ul class="nav nav-user">
@@ -38,11 +39,11 @@
             </select>
         </form>
     </header>
-    <section class="messages">
+    <div class="messages">
         {% for message in messages %}
             <p class="message message-{{ message.tags }}">{{ message }}</p>
         {% endfor %}
-    </section>
+    </div>
     <main>{% block content %}{% endblock content %}</main>    
     <footer>
         {% block footer %}{% endblock footer %}
