--- a/tasker_jolita/information/templates/information/information_list.html
+++ b/tasker_jolita/information/templates/information/information_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}{% load i18n %}
-{% block title %}{{ block.super }} list{% endblock title %}
+{% block title %}{{ block.super }} {% endblock title %}
 {% block content %}
 <h1>{% trans "information"|capfirst %}</h1>
 <ul>
