--- a/tasker_jolita/tasks/templates/tasks/task_list.html
+++ b/tasker_jolita/tasks/templates/tasks/task_list.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}{% load i18n %}
-{% block title %}{{ block.super }} list{% endblock title %}
+{% block title %}{{ block.super }} | {% endblock title %}
 {% block content %}
 <h1>{% trans "tasks"|capfirst %}<span style = "float:right;"> {% trans "deadline"|capfirst %}</span></h1>
 <ul>
