--- a/tasker_jolita/user_profile/templates/user_profile/signup.html
+++ b/tasker_jolita/user_profile/templates/user_profile/signup.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}{% load i18n %}
 {% block title %}{% trans "signup for"|capfirst %} {{ block.super }}{% endblock title %}
 {% block content %}
-<h1>{% trans "signup for"|capfirst %} TASKer</h1>
+<h1>{% trans "signup for"|capfirst %} MIAU</h1>
 <form method="post" action="{{ request.path }}">
     {% csrf_token %}
     {{ form.as_p }}
