--- a/tasker_jolita/tasks/templates/base.html
+++ b/tasker_jolita/tasks/templates/base.html
@@ -10,6 +10,7 @@
     <header>
         <span class="logo">MIAU</span>
         <ul class='nav'>
+            <li><a href="#">{% trans "main"|capfirst %}</a></li>
             <li><a href="{% url 'index' %}">{% trans "dashboard"|capfirst %}</a></li>
             <li><a href="{% url 'project_list' %}">{% trans "projects"|capfirst %}</a></li>
             <li><a href="{% url 'task_list' %}">{%trans "tasks"|capfirst %}</a></li>
