--- a/tasker_jolita/tasks/templates/tasks/project_detail.html
+++ b/tasker_jolita/tasks/templates/tasks/project_detail.html
@@ -9,6 +9,11 @@
     </p>
 {% endif %}
 <p>{% trans "owner" %}: <a href="{% url "user_detail" project.owner.username %}">{{ project.owner }}</a></p>
+{% if project.youtube_video %}
+<div class='tube'>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/{{project.youtube_video}}" title="YouTube daydreamer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<div>
+{% endif %}
 <h2>{% trans "tasks"|capfirst %} {{ project.tasks.count }}</h2>
 <ul>
     <li class="list-table-header">
