--- a/tasker_jolita/tasks/static/css/style.css
+++ b/tasker_jolita/tasks/static/css/style.css
@@ -240,6 +240,11 @@ button:hover, .button:hover {
     
 }
 
+.toolbar form select, .toolbar form input {
+    padding: 0.4rem;
+}
+
+
 div.tube {
     padding: 1rem;
 }
