--- a/tasker_jolita/tasks/templates/tasks/project_detail.html
+++ b/tasker_jolita/tasks/templates/tasks/project_detail.html
@@ -21,11 +21,11 @@
         <span style="float:right;">{% trans "deadline"|capfirst %}</span>
     </li>
 {% for task in project.tasks.all %}
-<li><a href="{% url "task_done" task.pk %}">
-        {% if task.is_done %} &#x2611;{%else %}&#x2610;{%endif %}</a>
-        <a href ="{% url "task_detail" task.pk %}">{{task.name }}</a>
-        <span style="float:right;">{{ task.deadline }}</span>
-</li> 
+<li><a href="{% url "task_done" task.pk %}?next={{ request.path|urlencode }}">
+    {% if task.is_done %}&#x2611;{% else %}&#x2610;{% endif %}</a>
+    <a href="{% url "task_detail" task.pk %}">{{ task.name }}</a>
+    <span style="float:right;">{{ task.deadline }}</span>
+</li>
 {%empty %}
     <li>{% trans "no tasks found"|capfirst %}</li>
     {% endfor %}
