--- a/tasker_jolita/tasks/templates/tasks/task_list.html
+++ b/tasker_jolita/tasks/templates/tasks/task_list.html
@@ -1,7 +1,29 @@
 {% extends "base.html" %}{% load i18n %}
 {% block title %}{{ block.super }} | {% endblock title %}
 {% block content %}
-<h1>{% trans "tasks"|capfirst %}<span style = "float:right;"> {% trans "deadline"|capfirst %}</span></h1>
+<h1>{% trans "tasks"|capfirst %}</h1>
+<div class="toolbar">
+    <a class="button" href="{% url "task_create" %}?next={{ next|urlencode }}">{% trans "create new"|title %}</a>
+    <form method="get" action="{{ request.path }}">
+        <select name="owner" onchange="this.form.submit();">
+            <option value="">{% trans "filter by owner"|capfirst %}</option>
+            {% for user in user_list %}
+            <option value="{{ user.username }}" {% if user.username == request.GET.owner %}selected{% endif %}>
+                {{ user.first_name }} {{ user.last_name }}
+                ({{ user.username }})
+            </option>
+                {% endfor %}
+        </select>
+        <select name="project_pk" onchange="this.form.submit();">
+            <option value="">{% trans "filter by project"|capfirst %}</option>
+            {% for project in project_list %}
+                <option value="{{ project.pk }}" {% if project.pk|slugify == request.GET.project_pk %}selected{% endif %}>{{ project.name }}</option>
+            {% endfor %}
+        </select>
+        <input type="text" name="search_name" value="{{ request.GET.search_name }}" placeholder="{% trans 'search by name' %}...">
+        <button type="submit">&#128269;</button>
+    </form>
+</div>
 <ul>
     <li class="list-table-header">
         <span> {% trans "name"|capfirst %} </span>
@@ -10,7 +32,7 @@
 {% for task in task_list %}
     <li><a href="{% url "task_done" task.pk %}">
         {% if task.is_done %} &#x2611;{%else %}&#x2610;{%endif %}</a>
-        <a href ="{% url "task_detail" task.pk %}">{{task.name }}</a>
+        <a href="{% url "task_detail" task.pk %}?next={{ next|urlencode }}">{{ task.name }}</a>
         <span style="float:right;">{{ task.deadline }}</span>
     </li> 
 {%empty %}
