--- a/tasker_jolita/tasks/static/css/style.css
+++ b/tasker_jolita/tasks/static/css/style.css
@@ -224,7 +224,7 @@ button:hover, .button:hover {
 }
 
 .toolbar {
-    margin: 0.5rem ;
+    margin: 1rem ;
 }
 
 .toolbar form {
@@ -276,4 +276,19 @@ ul.dashboard li .stat {
     background-color: #ffffff9f;
     border-radius: 5rem;
     min-width: 7rem;
+}
+
+.user-content {
+    background-color: #ffffff7f;
+    border: 2px solid #999999;
+    border-radius: 1rem;
+    margin: 1rem;
+    overflow: auto;
+    max-width: max-content;
+}
+
+.toolbar form select.like-type {
+    margin: 0; padding: 0;
+    background-color: transparent;
+    border: none;
 }
