--- a/tasker_jolita/tasks/templates/base.html
+++ b/tasker_jolita/tasks/templates/base.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>{% load static i18n %}{% get_current_language as LANGUAGE_CODE %}{% get_available_languages as LANGUAGES %}
 <html lang="{{ LANGUAGE_CODE }}">
 <head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}MIAU{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="icon" type="image/png" href="{% static "img/cat.png" %}">
+    {% if request.user.is_authenticated and form %}
+    <script src="{% static 'tinymce/tinymce.min.js' %}"></script>
+    {{ form.media }}
+{% endif %}
 </head>
 <body>
     <header>
